--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,7 @@ add easy movement of object in the viewer
 add ui elements(text and buttons)
 finish lighting
 adding custom objects scripts in the scene editor
+play the scene of the scene editor when running the game through it
 
 maybe:
 multiplayer and/or multiscreen(local multiplayer)
