--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 add ui elements(text and buttons)
 adding custom objects scripts in the scene editor
+input Manager
 
 maybe:
 multiplayer and/or multiscreen(local multiplayer)
