added ideas to the todo

--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,5 @@ multiplayer and/or multiscreen(local multiplayer)
 physics
 events
 add easy movement of object in the viewer
+tiles
+eazy walls making
